app-repos/careerforge/kustomize/base/common.yaml
---
# Namespace-level NetworkPolicy: only allow intra-namespace + ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: careerforge-default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: careerforge
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  egress:
    - {}  # Allow all egress (DNS, Vault, Keycloak, external APIs)
